--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site guessmusic"
+      content="Web site guess-music"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/LogoLightMovil.svg" />
     <title>GuessMusic</title>
