Se añade meta tags en forma de cards

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/LogoLightMovil.svg" />
+		<meta charset="utf-8" />
+		<link rel="icon" href="%PUBLIC_URL%/LogoLightMovil.svg">
+		<title>GuessMusic</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site guess-music"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/LogoLightMovil.svg" />
-    <title>GuessMusic</title>
+		<meta name="title" content="Social Music | GuessMusic">
+    <meta name="description" content="Red social que incluye canciones para adivinar" />
+
+		<meta property="og:title" content="Social Music | GuessMusic">
+    <meta property="og:description" content="Red social que incluye canciones para adivinar">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://app-guessmusic.herokuapp.com">
+    <meta property="og:locale" content="es_PE">
+    <meta property="og:site_name" content="Social Music | GuessMusic">
+    <meta property="og:image" content="https://raw.githubusercontent.com/ccastillob/guessmusic/master/public/BackgroundSiteGuessmusic.png">
+
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/LogoLightMovil.svg" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
